# rnm

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  changelog  config.status  configure  configure.ac  configure.scan  globals.cpp  globals.h  install  man.1  man.html  man1.html  prepare.sh  readme.html  rnm  rnm.1  rnm.1.mwiki  rnm.cpp  rnm.html  rnm.md  rnm.mwiki  uninstall
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
jpcre2/: .travis.yml  AUTHORS  Additional Info.txt  ChangeLog  Doxyfile  LICENCE  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  configure  configure.ac  crmd  prepare
jpcre2/doxy/: customdoxygen.css  doxydoc.md  footer.html  help
jpcre2/doxy/1.8.13/: footer.html
jpcre2/doxy/bkp/: customdoxygen.css  footer.html  header.html
jpcre2/src/: Makefile.am  Makefile.in  jpcre2.hpp  pcre2_match.cpp  test.cpp  test0.cpp  test16.cpp  test32.cpp  test_match.cpp  test_match2.cpp  test_pthread.cpp  test_replace.cpp  test_replace2.cpp  test_shorts.cpp  testi.cpp  testio.cpp  testme.cpp
rnm-4.0.0/: .gitignore  .travis.yml  Makefile.am  Makefile.in  README  README.md  autogen.sh  configure.ac  rnm.1
rnm-4.0.0/src/: class.hpp  func.hpp  futil.hpp  inout.hpp  main.cpp  regutils.hpp  strutils.hpp
src/: .fuse_hidden0000019700000045  .fuse_hidden0000054400000092  Makefile  Makefile.am  Makefile.in  a.out  class.hpp  classes.h  classes.hpp  func.hpp  funcs.hpp  futil.hpp  global.hpp  globals.h  globals.hpp  inout.hpp  jpcre2.hpp  list  main  main.cpp  myheader.hpp  proto.hpp  prototypes.hpp  regutils.hpp  rs  se  strnatcmp.hpp  strutils.hpp  test  test.cpp  test.gcda  test.gcno  test.txt  test.txt.link  test2  test2.cpp  test3  test3.cpp  test4  test4.cpp  (+5 more)
src/.deps/: main.Po
